# not-a-game

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  not-a-game_en_GB.ts
data/mods/basic/: mod.json
data/mods/basic/fractions/empire/: fraction.json
data/mods/basic/fractions/empire/buildings/: buildings.json
data/mods/basic/fractions/empire/buildings/magic_guild/: building.json
data/mods/basic/fractions/empire/buildings/temple/: building.json
data/mods/basic/fractions/empire/buildings/thief_guild/: building.json
data/mods/basic/fractions/mountain_clans/: fraction.json
data/mods/basic/fractions/mountain_clans/buildings/: buildings.json
data/mods/basic/fractions/mountain_clans/buildings/brewery/: building.json
data/mods/basic/fractions/mountain_clans/buildings/magic_guild/: building.json
data/mods/basic/fractions/mountain_clans/buildings/temple/: building.json
data/mods/basic/fractions/mountain_clans/buildings/thief_guild/: building.json
data/mods/basic/lords/guildmaster/: lord.json
data/mods/basic/lords/mage/: lord.json
data/mods/basic/lords/warlord/: lord.json
data/mods/basic/map_objects/capital_mountain_clans/: object.json
data/mods/basic/resource/: resources.json
data/mods/basic/resource/gold/: resource.json
data/mods/basic/resource/mana_death/: resource.json
data/mods/basic/resource/mana_forest/: resource.json
data/mods/basic/resource/mana_hell/: resource.json
data/mods/basic/resource/mana_life/: resource.json
data/mods/basic/resource/mana_runes/: resource.json
data/mods/basic/resources/: resources.json
data/mods/basic/resources/mana_death/: resource.json
data/mods/basic/resources/mana_life/: resource.json
data/mods/basic/resources/mana_runes/: resource.json
data/mods/basic/spells/ice_shield/: spell.json
data/mods/basic/units/gnome/: unit.json
data/mods/basic/units/gnome_warrior/: unit.json
data/mods/basic/units/goblin/: unit.json
data/mods/basic/units/guardian/: unit.json
src/client/ui/: battle_window.cpp  battle_window.h  battle_window.ui  capital_view_window.cpp  capital_view_window.h  capital_view_window.ui  global_map_window.cpp  global_map_window.h  global_map_window.ui  hire_unit_dialog.cpp  hire_unit_dialog.h  hire_unit_dialog.ui  new_turn_dialog.cpp  new_turn_dialog.h  new_turn_dialog.ui  player_setup_dialog.cpp  player_setup_dialog.h  player_setup_dialog.ui  resources_widget.cpp  resources_widget.h  squad_widget.cpp  squad_widget.h  squad_widget.ui  start_window.cpp  start_window.h  start_window.ui  unit_widget.cpp  unit_widget.h  unit_widget.ui
src/lib/engine/: engine.cpp  engine.h  event.h  map_view.h  mechanics.h  path.cpp  path.h  player.h  player_state.h
src/lib/entities/: building.h  common.h  components.h  effect.h  fraction.h  global_map.cpp  global_map.h  inventory.h  item.h  lord.h  map_components.h  resource.h  spell.h  squad.h  unit.cpp  unit.h  unit_grid.cpp  unit_grid.h
src/lib/entities/ut/: test_resource.cpp
src/lib/game/: 1.tar.bz2  map.h  mod.cpp  mod.h  saga.h  settings.h
src/lib/state/: state.cpp  state.h
src/lib/status/: status.cpp  status.h
src/lib/ui/: icon.cpp  icon.h
src/lib/util/: assert.h  id.h  logger.h  map_utils.h  paged_vector.h  registry.h  settings.h  types.h
src/lib/util/ut/: test_paged_vector.cpp  test_registry.cpp
